--- a/GenCon-iOS/GenCon-iOS/Base.lproj/Main.storyboard
+++ b/GenCon-iOS/GenCon-iOS/Base.lproj/Main.storyboard
@@ -41,6 +41,7 @@
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.0" green="0.58823529411764708" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.0" green="0.58823529409999997" blue="0.53333333329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -80,25 +81,25 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="r4Y-oa-SZj">
-                                                    <rect key="frame" x="0.0" y="8" width="0.0" height="133.5"/>
+                                                    <rect key="frame" x="8" y="8" width="359" height="133.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fjk-vy-OwI">
-                                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="108"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="359" height="108"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LL3-Oy-RhE">
-                                                            <rect key="frame" x="0.0" y="113" width="0.0" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="113" width="359" height="20.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" text="開始日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3dQ-oK-tqh">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="20.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="179.5" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="終了日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MFe-SU-e1v">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="20.5"/>
+                                                                    <rect key="frame" x="179.5" y="0.0" width="179.5" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -135,6 +136,9 @@
                     <navigationItem key="navigationItem" title="1970/01/01" id="wo4-rv-buN">
                         <barButtonItem key="rightBarButtonItem" image="add" id="EcG-5h-sks">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="eZw-Ww-ia7" kind="show" id="4h2-ex-9sj"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -145,6 +149,72 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QRA-6u-srM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1431.2" y="1228.3358320839582"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="lyu-EL-5mo">
+            <objects>
+                <viewController id="eZw-Ww-ia7" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cjf-HW-nyd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="smq-RO-fy8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wUJ-et-GYB">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="900"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6f-fv-ZV2">
+                                                <rect key="frame" x="20" y="20" width="335" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4uE-Wf-879">
+                                                <rect key="frame" x="20" y="51" width="335" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="4uE-Wf-879" firstAttribute="leading" secondItem="wUJ-et-GYB" secondAttribute="leading" constant="20" id="3N9-me-2tA"/>
+                                            <constraint firstAttribute="trailing" secondItem="C6f-fv-ZV2" secondAttribute="trailing" constant="20" id="NFO-Xt-ogo"/>
+                                            <constraint firstItem="C6f-fv-ZV2" firstAttribute="leading" secondItem="wUJ-et-GYB" secondAttribute="leading" constant="20" id="WQz-65-VMu"/>
+                                            <constraint firstItem="4uE-Wf-879" firstAttribute="top" secondItem="C6f-fv-ZV2" secondAttribute="bottom" constant="10" id="Xul-GK-Zro"/>
+                                            <constraint firstAttribute="trailing" secondItem="4uE-Wf-879" secondAttribute="trailing" constant="20" id="hgI-jJ-W9d"/>
+                                            <constraint firstItem="C6f-fv-ZV2" firstAttribute="top" secondItem="wUJ-et-GYB" secondAttribute="top" constant="20" id="iJA-iW-5YH"/>
+                                            <constraint firstAttribute="height" constant="900" id="pGg-Gy-NOH"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="wUJ-et-GYB" firstAttribute="leading" secondItem="smq-RO-fy8" secondAttribute="leading" id="2TC-Ie-n2u"/>
+                                    <constraint firstAttribute="trailing" secondItem="wUJ-et-GYB" secondAttribute="trailing" id="3dl-ip-Dwm"/>
+                                    <constraint firstItem="wUJ-et-GYB" firstAttribute="width" secondItem="smq-RO-fy8" secondAttribute="width" id="B9n-p1-R12"/>
+                                    <constraint firstAttribute="bottom" secondItem="wUJ-et-GYB" secondAttribute="bottom" id="DfD-nI-jSJ"/>
+                                    <constraint firstAttribute="height" constant="900" id="EQA-yh-Jfu"/>
+                                    <constraint firstItem="wUJ-et-GYB" firstAttribute="top" secondItem="smq-RO-fy8" secondAttribute="top" id="I8w-6y-KdK"/>
+                                    <constraint firstAttribute="bottom" secondItem="wUJ-et-GYB" secondAttribute="bottom" id="hdV-dv-b3h"/>
+                                    <constraint firstItem="wUJ-et-GYB" firstAttribute="top" secondItem="smq-RO-fy8" secondAttribute="top" id="tpT-az-3hk"/>
+                                    <constraint firstItem="wUJ-et-GYB" firstAttribute="leading" secondItem="smq-RO-fy8" secondAttribute="leading" id="u41-NV-yV4"/>
+                                    <constraint firstAttribute="trailing" secondItem="wUJ-et-GYB" secondAttribute="trailing" id="u7n-kH-df0"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="f8q-EY-woz" firstAttribute="bottom" secondItem="smq-RO-fy8" secondAttribute="bottom" id="Wao-I7-vfi"/>
+                            <constraint firstItem="smq-RO-fy8" firstAttribute="top" secondItem="f8q-EY-woz" secondAttribute="top" id="d6D-FG-HLV"/>
+                            <constraint firstItem="f8q-EY-woz" firstAttribute="trailing" secondItem="smq-RO-fy8" secondAttribute="trailing" id="pPr-d3-gd6"/>
+                            <constraint firstItem="smq-RO-fy8" firstAttribute="leading" secondItem="f8q-EY-woz" secondAttribute="leading" id="uss-kJ-6Jr"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="f8q-EY-woz"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FNi-B2-jAJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1431" y="1955"/>
         </scene>
         <!--1970/01/01-->
         <scene sceneID="fca-oq-5gk">
